--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,12 @@
             <version>3.141.59</version>
         </dependency>
     </dependencies>
-
+ <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+</plugins>
+</build>
 </project>
